--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -4,9 +4,6 @@
 		<meta charset="utf-8"></meta>
 		<title>D3Test</title>
 		<style>
-			svg {
-				background-color: beige;
-			}
 			html{
 				height: 100%;
 			}
@@ -25,8 +22,31 @@
 				width: 100%;
 				height: 100%;
 			}*/
+
+			#chart_container {
+				position: relative;
+				font-family: Arial, Helvetica, sans-serif;
+			}
+			#chart {
+				position: relative;
+				left: 40px;
+			}
+			#y_axis {
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				width: 40px;
+			}
 		</style>
+		<link rel="stylesheet" href="http://code.shutterstock.com/rickshaw/rickshaw.min.css">
+		<link type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css">
+		<link type="text/css" rel="stylesheet" href="http://code.shutterstock.com/rickshaw/examples/css/extensions.css?v=2">
+
+
 		<script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
+		<script type="text/javascript" src="http://code.shutterstock.com/rickshaw/rickshaw.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="./inheritance.js"></script>
 		<script type="text/javascript" src="./infovis.js"></script>
 		<script type="text/javascript">
@@ -55,7 +75,7 @@
 
 				if(isD3Available()){
 
-				//	window.testCanvas = new infovis.LineDiagram("#viz");
+				//	window.testCanvas = new infovis.LineDiagram("#chart");
 				}
 
 				var iframe = document.getElementById("parameterArea");
@@ -92,15 +112,175 @@
 
 				console.log("hello");
 				console.log(series);
+
+
+				var seriesData = process(series);
+
+				renderGraph(seriesData);
+			}
+
+
+			function getIndexOfCategory(category, exampleRow){
+
+				return exampleRow.indexOf(
+					function(elementAccessor, descendingIndex){
+
+						return elementAccessor.meta("column").meta("column_element_name").access() == category;
+					}
+				);
+			}
+
+			function getCategoryRowAccessor(category, exampleRow) {
+
+				var indexOfCategory = getIndexOfCategory(category, exampleRow);
+
+				return function(rowAccessor){
+
+					return rowAccessor.at(indexOfCategory).access();
+				};
+			}
+
+			function getDateProcessFunctor(exampleDateAccesor){
+
+				var type = exampleDateAccesor.meta("column").meta("column_element_type").access();
+
+				var processFunctor;
+
+				if(type == "time"){
+					processFunctor = function(date){
+						return (typeof(date) == "object")? date.getTime()/1000 : undefined;
+					}
+				}
+				else{
+					if(type == "number"){
+						processFunctor = function(date){
+							return date;
+						}
+					}
+					else{
+						// TODO:
+						throw new Error("sorry type '" + type + "' is not supported yet");
+					}
+				}
+
+				return processFunctor;
+			}
+
+			/**
+			 * @return function(dataAccessor1, dataAccessor2)
+			 * 	@return <0 if dataAccessor1 < dataAccessor2; >0 if dataAccessor1 > dataAccessor2; else 0
+			 */
+			function getCompareFunctor(baseDataAccessor, attributeName){
+
+				var exampleRow = baseDataAccessor.at(0);
+
+				var indexOfCategory = getIndexOfCategory(attributeName, exampleRow);
+
+				var processFunctor = getDateProcessFunctor(exampleRow.at(indexOfCategory))
+
+				return function(a, b){
+
+					return processFunctor(a.at(indexOfCategory).access()) - processFunctor(b.at(indexOfCategory).access());
+				};
+			}
+
+			function getExtractFunctor(baseDataAccessor, xAttributeName, yAttributeName){
+
+				var exampleRow = baseDataAccessor.at(0);
+
+				var xAttributeAccessor = getCategoryRowAccessor(xAttributeName, exampleRow);
+				var yAttributeAccessor = getCategoryRowAccessor(yAttributeName, exampleRow);
+
+				var indexOfXAttribute = getIndexOfCategory(xAttributeName, exampleRow);
+				var indexOfYAttribute = getIndexOfCategory(yAttributeName, exampleRow);
+
+				var processX = getDateProcessFunctor(exampleRow.at(indexOfXAttribute));
+				var processY = getDateProcessFunctor(exampleRow.at(indexOfYAttribute));
+
+				return function(rowDataAccessor){
+					return {
+						x: processX(xAttributeAccessor(rowDataAccessor)),
+						y: processY(yAttributeAccessor(rowDataAccessor))
+					};
+				}
+			}
+
+			function process(listOfSeries){
+
+				var colorPalette = new Rickshaw.Color.Palette();
+
+				var processFunctor = function(series){
+					// sort
+					var compareFunctor = getCompareFunctor(
+						series.baseDataAccessor,
+						series.sortingAttribute
+					);
+					var sortedAccesor = series.baseDataAccessor.sort(compareFunctor)
+
+					// extract
+					var extractFunctor = getExtractFunctor(
+						series.baseDataAccessor,
+						series.xAttribute,
+						series.yAttribute
+					);
+					var data = sortedAccesor.split().map(extractFunctor);
+
+					// assemble
+					return {
+						name: series.name,
+						data: data,
+						color: colorPalette.color()
+					};
+				}
+
+				return listOfSeries.map(processFunctor);
+			}
+
+			function renderGraph(seriesData){
+
+				graph = new Rickshaw.Graph({
+					element: document.querySelector("#chart"),
+					width: 750,
+					height: 300,
+					renderer: "line",
+					tension: 1,
+					strokeWidth: 1,
+					dotSize: 2,
+					stroke: "true",
+					series: seriesData
+				});
+
+				//graph.renderer.dotSize = 2;
+
+
+				var y_axis = new Rickshaw.Graph.Axis.Y( {
+					graph: graph,
+					orientation: 'left',
+					element: document.getElementById('y_axis'),
+				} );
+
+				var x_axis = new Rickshaw.Graph.Axis.Time( { graph: graph } );
+
+				graph.render();
+
+				var rangeSlider = new Rickshaw.Graph.RangeSlider( {
+					graph: graph,
+					element: document.getElementById('rangeSlider'),
+				} );
 			}
 
 
 		</script>
 	</head>
 	<body onload="onLoad()">
-		<div id="viz">
-				<p id="javaScriptNotAvailableDummy">JavaScript was not available</p>
-				<iframe name="parameterArea" id="parameterArea" scrolling="no" src="Interaction Test.html">there should be a diagram area</iframe>
+		<p id="javaScriptNotAvailableDummy">JavaScript was not available</p>
+		<div>
+			<iframe name="parameterArea" id="parameterArea" scrolling="no" src="Interaction Test.html">there should be a diagram area</iframe>
+		</div>
+		<div id="chart_container">
+			<div id="y_axis"></div>
+			<div id="chart"></div>
+			<div id="rangeSlider"></div>
 		</div>
 	</body>
 </html>
