--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -9,15 +9,15 @@
 				min-height: 330px;
 			}
 
-			#chart_container {
+			.chart_container {
 				position: relative;
 				font-family: Arial, Helvetica, sans-serif;
 			}
-			#chart {
+			.chart {
 				position: relative;
 				left: 40px;
 			}
-			#y_axis {
+			.y_axis {
 				position: absolute;
 				top: 0;
 				bottom: 0;
