tiny layout correction

--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -15,13 +15,16 @@
 			}
 			.chart {
 				position: relative;
-				left: 40px;
 			}
 			.y_axis {
 				position: absolute;
 				top: 0;
 				bottom: 0;
 				width: 40px;
+			}
+			.chart_and_slider_group {
+				position: relative;
+				left: 40px;
 			}
 		</style>
 		<link rel="stylesheet" href="http://code.shutterstock.com/rickshaw/rickshaw.min.css">
