--- a/Applications/DataExplorer/InfoVis/TimeSeriesVisualization.html
+++ b/Applications/DataExplorer/InfoVis/TimeSeriesVisualization.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"></meta>
-		<title>D3Test</title>
+		<title>TimeSeriesVisualization</title>
 		<style>
 			iframe {
 				min-width: 750px;
